--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
                 </div>
 
                 <div class="stream-camera">
+                    <h3>CAMERA REAL 2</h3>
+                    <img id="stream-real2" src="" alt="Stream Camera Real 2">
+                </div>
+
+                <div class="stream-camera">
                     <h3>CAMERA VIRTUAL</h3>
                     <img id="stream-virtual" src="" alt="Stream Camera Virtual">
                 </div>
