--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <img id="stream-real2" src="" alt="Stream Camera Real 2">
                 </div>
 
-                <div class="stream-camera">
+                <div class="stream-camera" id="camera-virtual">
                     <h3>CAMERA VIRTUAL</h3>
                     <img id="stream-virtual" src="" alt="Stream Camera Virtual">
                 </div>
